--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -7,7 +7,7 @@
   --trans: all 0.4s ease 0s;
 }
 
-body {
+.user-container {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -18,14 +18,14 @@ body {
   font-size: 1em;
 }
 
-body *,
-body *:before,
-body *:after {
+.user-container *,
+.user-container *:before,
+.user-container *:after {
   box-sizing: border-box;
 }
 
-.content {
-  width: 90vmin;
+.user-container {
+  // width: 90vmin;
 }
 
 h2 {
