--- a/src/containers/Header/BenHeader.scss
+++ b/src/containers/Header/BenHeader.scss
@@ -1,204 +1,246 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700");
 
-.navbar {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #0e2431;
+@mixin sp-layout {
+  @media screen and (max-width: 750px) {
+    @content;
+  }
 }
 
-.navbar {
-  width: 100%;
-  background-color: inherit;
-  font-family: "Poppins", sans-serif;
+@mixin pc-layout {
+  @media screen and (min-width: 751px) {
+    @content;
+  }
 }
 
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 62px;
-  width: 100%;
-}
+.ben-header {
+  .menu {
+    font-size: 21px;
+    line-height: 100%;
+    text-transform: capitalize;
+    font-family: futura;
+    color: #1a1a1a;
+    .menu-inner {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      .gallery {
+        width: 40%;
+        display: flex;
+        background-color: #fff;
+        .title-menu {
+          width: 82%;
+          padding-top: 120px;
+          p {
+            transform: translateY(100%);
+            overflow: hidden;
+            height: 30px;
+            padding-left: 96px;
+          }
 
-.navbar .menu-items {
-  display: flex;
-  .ben-logo {
-    img {
-      width: 250px;
-      height: 250px;
+          img {
+            height: 550px;
+            width: 472.31px;
+          }
+        }
+        .ben-logo {
+          border-right: 2px solid #b4b4b41a;
+          width: 18%;
+          display: grid;
+          grid-template-rows: repeat(3, 1fr);
+          row-gap: 20px;
+          padding: 5px 5px 5px 5px;
+
+          .ben-logo-top {
+          }
+          .ben-logo-mid {
+            img {
+              height: 100px;
+              width: 100px;
+              display: flex;
+              transform: translateY(50%);
+              padding: 5px;
+            }
+          }
+          .ben-logo-bottom {
+          }
+        }
+      }
+    }
+    .image-menu {
+      width: 60%;
+      img {
+        width: -webkit-fill-available;
+        height: -webkit-fill-available;
+        transform: translateY(50%);
+      }
     }
   }
 }
 
-.navbar .nav-container li {
-  list-style: none;
-}
-
-.navbar .nav-container a:hover {
-  font-weight: bolder;
-}
-
-.nav-container {
-  display: block;
-  position: relative;
-  height: 60px;
-}
-
-.nav-container .checkbox {
+#burger-toggle {
   position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 14px;
-  left: 20px;
-  z-index: 5;
+  appearance: none;
   opacity: 0;
-  cursor: pointer;
-}
 
-.nav-container .hamburger-lines {
-  display: flex;
-  .hamburger-menu {
-    display: block;
-    height: 17px;
-    width: 23px;
-    position: absolute;
-    top: 22px;
-    left: 20px;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: inherit;
-  }
-  .menu-text {
-    position: absolute;
-    color: #ffffff;
-    top: 20px;
-    left: 60px;
-    font-family: "Proxima Nova W15";
-    font-size: 13px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    text-decoration: none;
-  }
-}
-.contact {
-  a {
-    position: absolute;
-    top: 20px;
-    right: 19px;
-    font-family: "Proxima Nova W15";
-    font-size: 13px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    color: white;
-    text-decoration: none;
-  }
-  a::after {
-    content: "";
-    background: white;
-    mix-blend-mode: exclusion;
-    width: calc(100% + 20px);
-    height: 0;
-    font-size: 13px;
-    position: absolute;
-    bottom: -4px;
-    font-weight: 600;
-    left: -10px;
-    color: #000000;
-    transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    border-radius: 2px;
-  }
-  a:hover::after {
-    height: calc(100% + 8px);
+  &:checked {
+    & ~ .menu {
+      opacity: 1;
+      visibility: visible;
+      img,
+      .title-menu p {
+        transform: translateY(0);
+        transition: 1.2s 0.1s cubic-bezier(0.35, 0, 0.07, 1);
+      }
+    }
+
+    & ~ .burger-menu {
+      .line {
+        &::after {
+          transform: translateX(0);
+        }
+
+        &:nth-child(1) {
+          transform: translateY(calc(var(--burger-menu-radius) / 5))
+            rotate(45deg);
+        }
+
+        &:nth-child(2) {
+          transform: scaleX(0);
+        }
+
+        &:nth-child(3) {
+          transform: translateY(calc(var(--burger-menu-radius) / -5))
+            rotate(-45deg);
+        }
+      }
+    }
   }
 }
 
-.nav-container .hamburger-lines .hamburger-menu .line {
+.burger-menu {
+  --burger-menu-radius: 42px;
+  position: fixed;
+  top: 5vh;
+  left: 2vw;
+  z-index: 100;
   display: block;
-  height: 1px;
-  width: 100%;
-  border-radius: 9px;
-  opacity: 1;
-  background-color: rgb(255, 255, 255);
-}
+  width: var(--burger-menu-radius);
+  height: var(--burger-menu-radius);
+  outline: none;
+  cursor: pointer;
+  background-color: #b4b4b41a;
+  border-radius: 7px;
 
-.nav-container .hamburger-lines .hamburger-menu .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
+  .line {
+    position: absolute;
+    left: 25%;
+    width: 50%;
+    height: 3px;
+    background: #000000;
+    overflow: hidden;
+    transition: 0.5s;
 
-.nav-container .hamburger-lines.hamburger-menu .line2 {
-  transition: transform 0.2s ease-in-out;
-}
+    &:nth-child(1) {
+      top: 30%;
+    }
 
-.nav-container .hamburger-lines .hamburger-menu .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
+    &:nth-child(2) {
+      top: 50%;
+    }
 
-.navbar .menu-items {
-  padding-top: 120px;
-  background-color: white;
-  height: 100vh;
-  width: 62%;
-  transform: translate(-150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
-  a {
-    font-family: "Proxima Nova W15";
-    font-size: 19px;
-    font-weight: 600;
-    letter-spacing: 4px;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
+    &:nth-child(3) {
+      top: 70%;
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: var(--primary-color-darker);
+      transform: translateX(-100%);
+      transition: 0.25s;
+    }
+
+    @for $i from 2 through 3 {
+      &:nth-child(#{$i})::after {
+        transition-delay: 0.1s * ($i - 1);
+      }
+    }
+  }
+
+  &:hover {
+    .line::after {
+      transform: translateX(0);
+    }
   }
 }
 
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  overflow-x: hidden;
+  visibility: hidden;
+  transition: 0.3s;
 
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
-}
+  &-nav {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    list-style-type: none;
 
-.nav-container
-  input[type="checkbox"]:checked
-  ~ .hamburger-lines
-  .hamburger-menu
-  .line1 {
-  transform: rotate(45deg);
-  background-color: black;
-}
+    @include sp-layout {
+      flex-direction: column;
+    }
 
-.nav-container
-  input[type="checkbox"]:checked
-  ~ .hamburger-lines
-  .hamburger-menu
-  .line2 {
-  transform: scaleY(0);
-}
+    &-item {
+      flex: 1;
+    }
 
-.nav-container
-  input[type="checkbox"]:checked
-  ~ .hamburger-lines
-  .hamburger-menu
-  .line3 {
-  transform: rotate(-45deg);
-  background-color: black;
-}
+    &-link {
+      position: relative;
+      display: inline-flex;
+      font-size: 2rem;
+      color: black;
+      text-decoration: none;
 
-.nav-container input[type="checkbox"]:checked ~ .logo {
-  display: none;
+      span {
+        overflow: hidden;
+
+        div {
+          transform: translateY(102%);
+        }
+      }
+
+      &::after {
+        position: absolute;
+        content: "";
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        background: var(--primary-color);
+        // transform: scaleX(0);
+        transform-origin: right;
+        transition: transform 0.5s;
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+        transform-origin: left;
+      }
+    }
+  }
 }
